header section add

--- a/index.html
+++ b/index.html
@@ -13,6 +13,33 @@
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     </head>
     <body>
+
+        <header class="position-relative">
+            <nav class="navbar navbar-expand">
+                <div class="container">
+                    <img src="./img/logo.png" alt="logo">
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                        <button type="button" class="red-btn fw-semibold">Sign In</button>
+                    </div>
+                </div>
+            </nav>
+
+            <section class="hero container h-75 d-flex flex-column align-items-center justify-content-center">
+                <h1 class="hero-title text-white text-center">Unlimited films, TV programmes and more</h1>
+                <p class="hero-first-p text-white text-center">Watch anywhere. Cancel at any time.</p>
+                <p class="hero-second-p text-white text-center">Ready to watch? Enter your email to create or restart your membership.</p>
+
+                <form class="row g-3 d-flex align-items-center justify-content-center w-100 w-lg-75">
+                    <div class="form-floating col-auto">
+                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                        <label for="floatingInput">Email address</label>
+                    </div>
+                    <div class="col-auto">
+                        <button type="submit" class="get-started-btn red-btn fw-bold">Get Started</button>
+                    </div>
+                </form>
+            </section>
+        </header>
         
         <script src="" async defer></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
