--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
                 </form>
             </section>
         </header>
+
+        <section class="purple-section position-absolute d-flex justify-content-center">
+            <div class="container-md d-row d-md-flex justify-content-center">
+                <div class="d-flex align-items-center justify-content-end px-4 col-12 col-md-5">
+                    <img class="img-fluid" src="./img/popcorn-logo.png" alt="popcorn">
+                </div>
+                <div class="d-flex flex-column justify-content-center col-12 col-md-7">
+                    <p>The Netflix you love for just £4.99</p>
+                    <p>Get the Standard with adverts plan.</p>
+                    <a href="#">Learn More</a>
+                </div>
+            </div>
+        </section>
         
         <script src="" async defer></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
