--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
                 </div>
             </div>
         </section>
+
+        <section class="enjoy-section py-5 bg-black text-light">
+            <div class="container d-flex row m-auto">
+                <div class="d-flex flex-column justify-content-center col-12 col-lg-6">
+                    <h2 class="section-title text-center text-lg-start">Enjoy on your TV</h2>
+                    <p class="section-paragraph text-center text-lg-start">Watch on smart Tvs, PlayStation, Xbox, Chromecast, Apple TV, Blu-Ray players and more.</p>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <img class="img-fluid" src="./img/tv.png" alt="tv">
+                </div>
+            </div>
+        </section>
         
         <script src="" async defer></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
