--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
                 </div>
             </div>
         </section>
+
+        <section class="watch-section py-5 bg-black text-light">
+            <div class="container d-flex row m-auto">
+                <div class="col-12 col-lg-6">
+                    <img class="img-fluid" src="./img/mobile-img.png" alt="mobile">
+                </div>
+                <div class="d-flex flex-column justify-content-center col-12 col-lg-6 order-first order-lg-last">
+                    <h2 class="section-title text-center text-lg-start">Watch everywhere</h2>
+                    <p class="section-paragraph text-center text-lg-start">Stream unlimited films and TV programmes on your phone, tablet, laptop and TV.</p>
+                </div>
+            </div>
+        </section>
         
         <script src="" async defer></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
