children section html code add

--- a/index.html
+++ b/index.html
@@ -77,6 +77,18 @@
                 </div>
             </div>
         </section>
+
+        <section class="children-section py-5 bg-black text-light">
+            <div class="container d-flex row m-auto">
+                <div class="d-flex flex-column justify-content-center col-12 col-lg-6">
+                    <h2 class="section-title text-center text-lg-start">Create profiles for children</h2>
+                    <p class="section-paragraph text-center text-lg-start">Send children on adventures with their favourite characters in a space made just for them - free with your membership.</p>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <img class="img-fluid" src="./img/children-img.png" alt="children">
+                </div>
+            </div>
+        </section>
         
         <script src="" async defer></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
