--- a/index.html
+++ b/index.html
@@ -194,6 +194,100 @@
                 </form>
             </div>
         </section>
+
+        <footer class="py-5 bg-black text-light">
+            <div class="container"> 
+                <div>
+                    <p>Questions? Call <a href="#">0900900900</a></p>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-sm-4">
+                        <ul>
+                            <li class="mb-2">
+                                <a href="#">FAQ</a>
+                            </li>
+                            <li class="mb-2">
+                                <a href="#">Media Center</a>
+                            </li>
+                            <li class="mb-2">
+                                <a href="#">Netflix Shop</a>
+                            </li>
+                            <li class="mb-2">
+                                <a href="#">Ways to Watch</a>
+                            </li>
+                            <li class="mb-2">
+                                <a href="#">Cookie Preferences</a>
+                            </li>
+                            <li class="mb-2">
+                                <a href="#">Speed Text</a>
+                            </li>
+                            <li class="mb-2">
+                                <a href="#">Only on Netflix</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-sm-4">
+                        <ul>
+                            <li class="mb-2">
+                                <a href="#">Help Center</a>
+                            </li>
+                            <li class="mb-2">
+                                <a href="#">Investor Relations</a>
+                            </li>
+                            <li class="mb-2">
+                                <a href="#">Redeem gift cards</a>
+                            </li>
+                            <li class="mb-2">
+                                <a href="#">Terms of Use</a>
+                            </li>
+                            <li class="mb-2">
+                                <a href="#">Corporate Information</a>
+                            </li>
+                            <li class="mb-2">
+                                <a href="#">Legal Guarantee</a>
+                            </li>
+                            <li class="mb-2">
+                                <a href="#">Advert ChoiCes</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-sm-4">
+                        <ul>
+                            <li class="mb-2">
+                                <a href="#">Account</a>
+                            </li>
+                            <li class="mb-2">
+                                <a href="#">Jobs</a>
+                            </li>
+                            <li class="mb-2">
+                                <a href="#">Buy Gift Cards</a>
+                            </li>
+                            <li class="mb-2">
+                                <a href="#">Privacy</a>
+                            </li>
+                            <li class="mb-2">
+                                <a href="#">Contact us</a>
+                            </li>
+                            <li class="mb-2">
+                                <a href="#">Legal Notices</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="py-3">
+                    <div class="position-absolute">
+                        <img class="position-absolute" width="17" src="./img/globe-icon.png" alt="globe">
+                    </div>
+                    <div class="position-absolute">
+                        <div class="arrow-down position-absolute"></div>
+                    </div>
+                    <select class="position-relative py-1" name="" id="">
+                        <option value="">English</option>
+                    </select>
+                </div>
+                <p>Netflix United Kingdom</p>
+            </div>
+        </footer>
         
         <script src="" async defer></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
